			CHANGES IN OUTBREAKER VERSION 1.1-7
NEW FEATURES
	o an exponential tail summing to 1e-4 is now added to the
	generation time distribution to cover the range of the outbreak;
	this will avoid occasional issues of -Inf temporal log-likelihood
	for some initial trees.

	o the arguments w.trunc and f.trunc have now disappeared, as they
	were no longer relevant


			CHANGES IN OUTBREAKER VERSION 1.1-6
BUG FIXES
	o fixed an error in transGraph caused by changes in igraph.


			CHANGES IN OUTBREAKER VERSION 1.1-5
BUG FIXES
	o genetic likelihood with large numbers of mutation was prone to
	numerical approximation errors; this is no longer the case.


			CHANGES IN OUTBREAKER VERSION 1.1-4
NEW FEATURES
	o implemented a local likelihood computation providing substantial
	improvements in speed and scalability


			CHANGES IN OUTBREAKER VERSION 1.1-3
BUG FIXES
	o fixed a bug due to the odd conversion of long numbers into
	characters by read.table - handling specific errors with R 3.1.0
	on some Mac versions.



			CHANGES IN OUTBREAKER VERSION 1.1-2
BUG FIXES
	o fixed a bug due to the odd conversion of long numbers into
	characters by read.table.



			CHANGES IN OUTBREAKER VERSION 1.1-1
NEW FEATURES
	o added an argument max.kappa which allows to limit the number of
	generations between two sampled cases, thereby avoiding a slowdown
	whenever the timespan of the outbreak is large (previous limit was
	the timespan itself, which required computing a large number of
	convolutions).

BUG FIXES
	o fixed a bug in plotOutbreak - error occured when plotting with
	col!=NULL
	


			CHANGES IN OUTBREAKER VERSION 1.1-0
NEW FEATURES
	o implementing the published version of the model, with a major
	change in the genetic likelihood and a new procedure for detecting
	genetic outliers and identifying imported cases

	o updated graphics

	o new function get.my to get mutation rates per unit time (and not
	per generation of infection)
